<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalendarFragment">

    <ScrollView
        android:id="@+id/scrollViewCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightPrimary"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleAddnewMeaurement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Dodaj nowy pomiar" />

                <Button
                    android:id="@+id/buttonAddNewMeasurement"
                    android:layout_width="131dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center"
                    android:text="+"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleRaportGlikemia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_glikemia1"
                android:textSize="24sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:background="@color/colorLightPrimary"
                    android:text="@string/hour" />

                <TextView
                    android:id="@+id/textView_glikemia_title_dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/title_glikemia" />

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="visible">


                <TextView
                    android:id="@+id/nothing_glikemia_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing_to_show"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/glikemiaRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleRaportInsulin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/insulin"
                android:textSize="24sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_insulin_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/hour" />

                <TextView
                    android:id="@+id/textView_title_insulin_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/textView_title_insulin_dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:text="@string/title_insulin"
                    android:textAlignment="textEnd" />
                </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/nothing_insulin_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing_to_show"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/insulinRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleRaportPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/blood_pressure"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_bp_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/hour" />

                <TextView
                    android:id="@+id/textView_title_bpp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/textView_title_pulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:text="@string/title_pulse"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/nothing_pressure_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing_to_show"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pressureRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleRaportMedicines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicines"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_med_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/hour" />

                <TextView
                    android:id="@+id/textView_title_med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:text="@string/title_medicines" />

                <TextView
                    android:id="@+id/textView_title_dosemed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:text="@string/title_medicines_dose"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/nothing_med_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing_to_show_med" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/medRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>